# aasirbad

./: .env.example  .env.railway  .gitignore  DATABASE_FIX.md  Dockerfile  README.md  SOP_Aasirbad_Server_Manual.md  SOP_Aasirbad_Server_Manual_tmp.html  check-db.sh  deploy.sh  docker-compose.yml  nixpacks.toml  railway.json  railway.toml  render.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  voiceforge.db
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_updated_at_triggers.py  002_fix_enum_lowercase.py  003_force_enum_lowercase.py  20260217_update_profilestatus_enum_to_lowercase.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  recordings.py  router.py  synthesis.py  voice_profiles.py
backend/app/models/: __init__.py  recording.py  user.py  voice_profile.py
backend/app/schemas/: recording.py  user.py  voice_profile.py
backend/app/services/: auth_service.py  recording_service.py  storage_service.py  synthesis_service.py  voice_service.py
backend/app/utils/: audio.py  security.py
backend/app/voice_engine/: __init__.py  preprocessor.py  synthesizer.py  trainer.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_api.py  test_audio.py  test_security.py
deploy/: setup-server.sh
deploy/nginx/: aasirbad.conf  cloudflare-ips.conf
dockerfiles/: Dockerfile.backend  Dockerfile.worker
frontend/: .dockerignore  .env.local.example  Dockerfile  capacitor.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/record/[token]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/app/synthesize/[id]/: page.tsx
frontend/src/hooks/: useAudioRecorder.ts  useWebSocket.ts
frontend/src/lib/: api.ts  audio-utils.ts
frontend/src/types/: index.ts
