[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "voiceforge"
version = "0.1.0"
description = "Professional voice cloning platform powered by Tortoise TTS"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VoiceForge Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<5.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Task Queue
    "celery[redis]>=5.3.6",
    "redis>=5.0.0",

    # Audio Processing (lightweight)
    "soundfile>=0.12.1",
    "scipy>=1.12.0",
    "numpy>=1.24.0",

    # SQLite async support (local development)
    "aiosqlite>=0.19.0",

    # Utilities
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "aiofiles>=23.2.1",
    "Jinja2>=3.1.3",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.34.0",
]
ml = [
    # Full audio processing
    "librosa>=0.10.1",
    "noisereduce>=3.0.0",

    # Voice Engine (Tortoise TTS + PyTorch)
    "tortoise-tts>=3.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "einops>=0.7.0",
    "transformers>=4.36.0",

    # Cloud storage for production
    "boto3>=1.34.0",

    # Monitoring
    "sentry-sdk[fastapi]>=1.39.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "COM", "C4", "ICN", "PIE", "PT", "RSE", "RET", "SIM", "TID", "TCH", "ARG", "ERA"]
ignore = ["S101", "B008"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
